pages and components

--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.0.4",
     "element-ui": "^2.3.4",
-    "nuxt": "^1.4.0"
+    "flex.css": "^1.1.7",
+    "nuxt": "^1.4.0",
+    "v-charts": "^1.16.8",
+    "vue": "^2.5.16",
+    "vue-echarts": "^3.0.7"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
